--- a/templates/root-my.cnf.j2
+++ b/templates/root-my.cnf.j2
@@ -1,4 +1,4 @@
 # {{ ansible_managed }}
 [client]
-user={{ mysql.username }}
-password={{ mysql.password }}
+user={{ app.laravel.mysql.username }}
+password={{ app.laravel.mysql.password }}
